kube/elk/kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kibana
  name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - image: kibana:7.8.1
          name: kibana
          ports:
            - containerPort: 5601
              name: kibana
          volumeMounts:
          - name: kibana-config-volume
            mountPath: /usr/share/kibana/config/kibana.yml
            subPath: kibana.yml
      volumes:
      - name: kibana-config-volume
        configMap:
          name: kibana-config
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: kibana
    project: elk
spec:
  type: NodePort
  selector:
      app: kibana
  ports:
    - port: 5601
      targetPort: 5601
      protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: elk-kibana-ingress
    annotations:
      kubernetes.io/ingress.class: nginx
spec:
    rules:
    - host: elk-kibana.apps.okd.codespring.ro
      http:
        paths:
        - path: /
          backend:
            serviceName: kibana
            servicePort: 5601
---
