kube/elk/logstash.yaml
# apiVersion: v1
# kind: ConfigMap
# metadata:
#     name: logstash-config
# data:
# #   logstash.yml: |
# #     http.host: "0.0.0.0"
# #     path.config: /usr/share/logstash/pipeline
#   logstash.conf: |
#     # all input will come from filebeat, no local logs
#     input {
#       beats {
#         port => 5044
#       }
#     }
#     filter {
#     }
#     output {
#       elasticsearch {
#         hosts => [ "http://okd-5mthh-worker-tb667.apps.okd.codespring.ro:30029" ]
#       }
#     }
# ---
kind: Deployment
apiVersion: apps/v1
metadata:
    name: logstash
spec:
    replicas: 1
    selector:
      matchLabels:
        app: logstash
    template:
      metadata:
        labels:
          app: logstash
      spec:
        containers:
          - image: logstash:7.8.1
            name: logstash
            ports:
              - containerPort: 5044
                name: filebeat
              - containerPort: 9600
                name: logstash
---
kind: Service
apiVersion: v1
metadata:
    name: logstash
spec:
    type: NodePort
    selector:
      app: logstash
    ports:
    - protocol: TCP
      port: 5044
      targetPort: 5044
      name: filebeat
    - protocol: TCP
      port: 9600
      targetPort: 9600
      name: logstash
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: elk-logstash-ingress
    annotations:
    kubernetes.io/ingress.class: nginx
spec:
    rules:
    - host: elk-logstash.apps.okd.codespring.ro
      http:
        paths:
        - path: /
          backend:
            serviceName: logstash
            servicePort: 5044
---
